# hack-the-back

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .env.prod.example  .gitignore  .pylintrc  CREDITS  Dockerfile  LICENSE  PROD.md  Pipfile  README.md  alembic.ini  backend.dockerfile  certbot-init.sh  deploy.sh  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  mypy.ini  prod-preflight.sh  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 2c1d5e7a9b30_add_account_security_state.py  bf8b33c13520_initial_schema.py
app/: cache.py  config.py  main.py  utils.py  validators.py
app/core/: db.py  orm.py
app/data/: form_questions.json
app/models/: __init__.py  constants.py  food_tracking.py  forms.py  meal.py  qr_scanner.py  requests.py  token.py  user.py
app/routers/: __init__.py  account.py  food_tracking.py  forms.py  meal.py  qrscanner.py
app/services/: applications.py  auth.py  email.py  wallet.py
hacktheback/: asgi.py  settings.py  urls.py  validators.py  wsgi.py
hacktheback/account/: authentication.py  email.py  managers.py  models.py  serializers.py  tests.py  utils.py
hacktheback/apps/: models.py
hacktheback/core/: errors.py  models.py  serializers.py
hacktheback/forms/: entry_generator.py  managers.py  models.py  utils.py
nginx/: Dockerfile  nginx.conf
settings/: __init__.py  account.py  auth.py  common.py  email.py  graphql.py  rest.py  utils.py
templates/: activation.html  confirmation.html  hacker_package.html  password_reset.html  rsvp.html
(+115 files in other folders)
