[project]
name = "hack-the-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "applepassgenerator>=0.0.2",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.115.12",
    "google-auth>=2.40.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pypdf>=6.4.0",
    "python-dotenv>=1.1.0",
    "qrcode>=8.2",
    "sqlmodel>=0.0.24",
]
