[project]
name = "hack-the-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.5",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.139.2",
    "google-auth>=2.56.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.12",
    "py-pkpass>=1.0.2",
    "pyjwt>=2.13.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "qrcode>=8.2",
    "sqlmodel>=0.0.39",
]
